objects/Session__c.object
<CustomObject>
    <description>This object captures the daily session for each section.</description>
    <fields>
        <fullName>Attendance_Count__c</fullName>
        <label>Attendance Count</label>
        <summaryForeignKey>Attendance__c.Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Attendance_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be checked when the teacher takes attendance for the session using the attendance page.</description>
        <label>Attendance Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_Attendance__c</fullName>
        <description>This is a cross object formula field that will show whether attendance is being recorded for the section.</description>
        <formula>IF( Section__r.Daily_Attendance__c ,&apos;Y&apos;, &apos;N&apos;)</formula>
        <label>Daily Attendance?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <description>End Date and Time for Session</description>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModified__c</fullName>
        <description>Keeps track of the individual who last saved a full set of attendance records for the session.</description>
        <label>LastModified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_No_Attendance__c</fullName>
        <description>This is a comment box for why there was no attendance taken for the session.</description>
        <label>Reason for No Attendance</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Record_Attendance__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This checkbox should be unchecked if attendance is not being collected for some reason. (Snow day for example)</description>
        <label>Record Attendance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Id__c</fullName>
        <description>Time Key (School + Period) + Section Id</description>
        <externalId>true</externalId>
        <label>Reference Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the section that the session belongs to.</description>
        <label>Section</label>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Date__c</fullName>
        <formula>DATEVALUE( End_DateTime__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <description>Date and time that session starts</description>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <description>This is a lookup to the time when this session is held.</description>
        <label>Time</label>
        <referenceTo>Time_Element__c</referenceTo>
        <relationshipLabel>Sessions</relationshipLabel>
        <relationshipName>Sessions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Attendance_Submitted__c</columns>
        <columns>Daily_Attendance__c</columns>
        <columns>End_DateTime__c</columns>
        <columns>Reason_for_No_Attendance__c</columns>
        <columns>Record_Attendance__c</columns>
        <columns>Reference_Id__c</columns>
        <columns>Section__c</columns>
        <columns>Session_Date__c</columns>
        <columns>Start_DateTime__c</columns>
        <columns>Time__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>