objects/Session__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Attendance_Submitted__c</columns>
    <columns>Daily_Attendance__c</columns>
    <columns>End_DateTime__c</columns>
    <columns>Reason_for_No_Attendance__c</columns>
    <columns>Record_Attendance__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Section__c</columns>
    <columns>Session_Date__c</columns>
    <columns>Start_DateTime__c</columns>
    <columns>Time__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>